# intent_clf

./: .gitignore  docker-compose.yml  pyproject.toml  req.txt
app/: Dockerfile  config.py  demo.py  docker-compose.yml  evaluate.py  main.py  requirements.txt  wait-for-it.py
app/routers/: search.py  upload.py
app/services/: embedding.py  vector_db.py
backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/models/: auth.py  request_models.py  retrain.py
backend/routers/: auth.py  metrics.py  predict.py  retrain.py  search.py  upload.py
backend/services/: auth.py  classification.py  embedding.py  metrics.py  retrain.py  vector_db.py
forntend/: api_utils.py  auth_ui.py  config.py  demo.py  evaluate.py  i18n.py  main.py  tab_classification.py  tab_data_upload.py  tab_similar_docs.py
forntend/tabs/: tab_classification.py  tab_data_upload.py  tab_retrain.py  tab_similar_docs.py
notebooks/: 2_extract_llm.py  2_fit_predict.ipynb  3_eda_2.ipynb  3_fit_predict.ipynb  4_fit_predict.ipynb  5_eda_2.ipynb  5_fit_predict.ipynb  6_fit_predict.ipynb  7_eda_2.ipynb  7_fit_predict.ipynb  8_fit_predict.ipynb  8_join_data.ipynb
notebooks/griga/: 1_error_analysis.ipynb  2_error_analysis (no others).ipynb  3_update_data.ipynb
trainer/: Dockerfile  requirements.txt
trainer/app/: api_utils.py  ctx.py  scheduler.py  script.py  worker.py
