[project]
name = "request-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "jose>=1.0.0",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pydentic>=0.0.1.dev3",
    "pymystem3>=0.2.0",
    "qdrant-client>=1.13.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "wordcloud>=1.9.4",
    "xlrd>=2.0.1",
]
